# vim: set noexpandtab:

2012-06-20 Steve
	* Updated to twentyinvfb version of MultiLep, and SUSYTools v71
	* Added calculation of num good vertex (nTracks > 4)
	* Added preliminary 2012 triggers:
		* EF_e24vhi_medium1
		* EF_2e12Tvh_loose1
		* EF_mu24i_tight
		* EF_2mu13
		* EF_e12Tvh_medium1_mu8
	* Move to 2012 pileup reweighting files:
		* $ROOTCOREDIR/data/PileupReweighting/mc12a_defaults.prw.root
		* $ROOTCOREDIR/data/MultiLep/ilumicalc_histograms_EF_e24vhi_medium1_200841-203524.root
	* Tagging SusyCommon-00-00-09
		* First tag for 2012 data/mc

2012-06-19 Steve
	* Fixed event timer calculation
	* Added helper script for tagging package: scripts/makeTag.sh
	* Tagging SusyCommon-00-00-08
		* Last tag for 2011 data/mc

2012-06-18 Steve
	* Added PDFTool for reweighting 7 TeV -> 8 TeV
	* Added switch in Makefile for controlling PDFTool usage.
		* Turn on USEPDFTOOL switch to use the tool.
		* Requires corresponding switch to be set in MultiLep package as well
	* Tagging SusyCommon-00-00-07

2012-06-17 Steve
	* Added TStopwatch for monitoring processing time

2012-06-11 Steve
	* Updating syntax and conventions for code consistency:
		* SYSTEMATIC -> SusyNtSys
		* NOM -> NtSys_NOM
		* etc.
	* Tagging SusyCommon-00-00-06

2012-06-05 Steve
	* Updated code to work with current fiveinvfb MultiLep pkg, 
	  which is here (directory structure is weird):
	  svn+ssh://svn.cern.ch/reps/atlasphys/Physics/SUSY/Analyses/Multilepton/trunk/fiveinvfb/MultiLep

2012-05-30 Matt
	* The great restructuring has begun! Merging now.
	* All things relevant to running over SusyNt moved to separate directory: SusyNtuple
	* Merged override of xsec in NtMaker
	* Added avgMu to NtMaker
	* Added electron cluster Energy
	* Added jet truth label	
	* Tagged SusyCommon-00-00-05 (added after.. sorry )	

#-----------------------------------------------------------------------------------------
# Changes made in parallel with Steve's Original version by Matt/Anyes/Serhan