@@ -1,5 +1,9 @@
 # vim: set noexpandtab:
-
+2012-06-21 Matt
+	* Added Photon methods to SusyD3PDAna and SusyNtMaker to load and save.
+	* Flag for saving: -savePh (default is false)
+	* Class now depends on PhotonTools and PhotonD3PDObject
+	
 2012-06-20 Steve
 	* Updated to twentyinvfb version of MultiLep, and SUSYTools v71
 	* Added calculation of num good vertex (nTracks > 4)
